Fix Java 8 compatibility: replace Java 9+ collection factory methods with Guava equivalents
Map.of(), Set.of(), and List.of() were introduced in Java 9.
Replace with ImmutableMap/ImmutableSet/ImmutableList from Guava
or Arrays.asList/Collections.emptyList/emptyMap in both main
and test sources.

Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>