@@ -20,6 +20,8 @@ import com.databricks.jdbc.model.core.ExternalLink;
 import com.databricks.jdbc.model.core.StatementStatus;
 import com.databricks.jdbc.model.telemetry.enums.DatabricksDriverErrorCode;
 import com.databricks.sdk.service.sql.StatementState;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import java.nio.ByteBuffer;
 import java.time.Instant;
 import java.util.*;
@@ -27,31 +29,32 @@ import java.util.*;
 public class DatabricksThriftUtil {
 
   private static final Map<TTypeId, ColumnInfoTypeName> T_TYPE_ID_COLUMN_INFO_TYPE_NAME_MAP =
-      Map.ofEntries(
-          Map.entry(BOOLEAN_TYPE, ColumnInfoTypeName.BOOLEAN),
-          Map.entry(TINYINT_TYPE, ColumnInfoTypeName.BYTE),
-          Map.entry(SMALLINT_TYPE, ColumnInfoTypeName.SHORT),
-          Map.entry(INT_TYPE, ColumnInfoTypeName.INT),
-          Map.entry(BIGINT_TYPE, ColumnInfoTypeName.LONG),
-          Map.entry(FLOAT_TYPE, ColumnInfoTypeName.FLOAT),
-          Map.entry(DOUBLE_TYPE, ColumnInfoTypeName.DOUBLE),
-          Map.entry(STRING_TYPE, ColumnInfoTypeName.STRING),
-          Map.entry(VARCHAR_TYPE, ColumnInfoTypeName.STRING),
-          Map.entry(TIMESTAMP_TYPE, ColumnInfoTypeName.TIMESTAMP),
-          Map.entry(BINARY_TYPE, ColumnInfoTypeName.BINARY),
-          Map.entry(DECIMAL_TYPE, ColumnInfoTypeName.DECIMAL),
-          Map.entry(DATE_TYPE, ColumnInfoTypeName.DATE),
-          Map.entry(CHAR_TYPE, ColumnInfoTypeName.CHAR),
-          Map.entry(INTERVAL_YEAR_MONTH_TYPE, ColumnInfoTypeName.INTERVAL),
-          Map.entry(INTERVAL_DAY_TIME_TYPE, ColumnInfoTypeName.INTERVAL),
-          Map.entry(ARRAY_TYPE, ColumnInfoTypeName.ARRAY),
-          Map.entry(MAP_TYPE, ColumnInfoTypeName.MAP),
-          Map.entry(NULL_TYPE, ColumnInfoTypeName.STRING),
-          Map.entry(STRUCT_TYPE, ColumnInfoTypeName.STRUCT));
+      ImmutableMap.<TTypeId, ColumnInfoTypeName>builder()
+          .put(BOOLEAN_TYPE, ColumnInfoTypeName.BOOLEAN)
+          .put(TINYINT_TYPE, ColumnInfoTypeName.BYTE)
+          .put(SMALLINT_TYPE, ColumnInfoTypeName.SHORT)
+          .put(INT_TYPE, ColumnInfoTypeName.INT)
+          .put(BIGINT_TYPE, ColumnInfoTypeName.LONG)
+          .put(FLOAT_TYPE, ColumnInfoTypeName.FLOAT)
+          .put(DOUBLE_TYPE, ColumnInfoTypeName.DOUBLE)
+          .put(STRING_TYPE, ColumnInfoTypeName.STRING)
+          .put(VARCHAR_TYPE, ColumnInfoTypeName.STRING)
+          .put(TIMESTAMP_TYPE, ColumnInfoTypeName.TIMESTAMP)
+          .put(BINARY_TYPE, ColumnInfoTypeName.BINARY)
+          .put(DECIMAL_TYPE, ColumnInfoTypeName.DECIMAL)
+          .put(DATE_TYPE, ColumnInfoTypeName.DATE)
+          .put(CHAR_TYPE, ColumnInfoTypeName.CHAR)
+          .put(INTERVAL_YEAR_MONTH_TYPE, ColumnInfoTypeName.INTERVAL)
+          .put(INTERVAL_DAY_TIME_TYPE, ColumnInfoTypeName.INTERVAL)
+          .put(ARRAY_TYPE, ColumnInfoTypeName.ARRAY)
+          .put(MAP_TYPE, ColumnInfoTypeName.MAP)
+          .put(NULL_TYPE, ColumnInfoTypeName.STRING)
+          .put(STRUCT_TYPE, ColumnInfoTypeName.STRUCT)
+          .build();
 
   private static final JdbcLogger LOGGER = JdbcLoggerFactory.getLogger(DatabricksThriftUtil.class);
   private static final List<TStatusCode> SUCCESS_STATUS_LIST =
-      List.of(TStatusCode.SUCCESS_STATUS, TStatusCode.SUCCESS_WITH_INFO_STATUS);
+      ImmutableList.of(TStatusCode.SUCCESS_STATUS, TStatusCode.SUCCESS_WITH_INFO_STATUS);
 
   public static TNamespace getNamespace(String catalog, String schema) {
     return new TNamespace().setCatalogName(catalog).setSchemaName(schema);
