@@ -1,5 +1,6 @@
 package com.databricks.jdbc.dbclient.impl.http;
 
+import com.google.common.collect.ImmutableList;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.List;
@@ -7,7 +8,7 @@ import org.apache.http.client.methods.HttpUriRequest;
 
 public class RequestSanitizer {
   private static final List<String> SENSITIVE_QUERY_PARAMS =
-      List.of("X-Amz-Security-Token", "X-Amz-Signature", "X-Amz-Credential");
+      ImmutableList.of("X-Amz-Security-Token", "X-Amz-Signature", "X-Amz-Credential");
 
   public static String sanitizeRequest(HttpUriRequest request) {
     try {
